Installed webpack bundler

--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "signup-form-practise",
   "version": "1.0.0",
   "description": "Reworking on my signup-form",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shamith",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
