--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My approach for solving Assignment-2",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shamith",
