--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Reworking on my signup-form",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack serve --mode=development",
     "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
