--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Shamith",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
