--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "script.js",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint"
   },
   "author": "shamith",
   "license": "ISC",
@@ -15,6 +16,11 @@
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
