--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production --stats verbose",
-    "lint": "eslint"
+    "lint": "eslint './src/**/*.{js,jsx}' --fix"
   },
   "author": "shamith",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.5",
+    "@babel/eslint-parser": "^7.25.1",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
@@ -22,7 +23,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-promise": "^6.6.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "sass": "^1.77.2",
